--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "postgres": "^3.4.3",
-    "redis": "^4.6.12",
-    "socket.io": "^4.7.3"
+    "redis": "^4.6.12"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
